Moved all the tests out to their own module, and turned off conservative checking for that module.